Bug 516744: Make titlebar in properties view readable in dark theme

--- a/bundles/org.eclipse.ui.themes/css/dark/e4-dark_globalstyle.css
+++ b/bundles/org.eclipse.ui.themes/css/dark/e4-dark_globalstyle.css
@@ -503,3 +503,7 @@ Link {
 ExpandableComposite {
     titlebar-color: #cccccc;
 }
+
+TabbedPropertyTitle > CLabel{
+	color: #9AC9D8;
+}
